change on branch2

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	 <link href="css/site.css" rel="stylesheet">
 </head>
 
+<div>
+<h1>This is the change on branch2</h1>
+<div>THis is the change made by Kane</div>
 <body>
     <div class="main-container">
         <div class="cloud-image">
